Read and return the system memory utilization
- Updated CMake version to 3.14 to use FetchContent
- Added test target that is disabled by default.  Use -DBUILD_TESTS=YES
to enable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.14)
 project(monitor)
 
 find_package(Curses REQUIRED)
@@ -6,6 +6,12 @@ include_directories(${CURSES_INCLUDE_DIRS})
 
 include_directories(include)
 file(GLOB SOURCES "src/*.cpp")
+
+set(BUILD_TESTS NO CACHE BOOL "Build test target")
+if (BUILD_TESTS)
+    add_library(linux_parser src/linux_parser.cpp)
+    add_subdirectory(tests)
+endif ()
 
 add_executable(monitor ${SOURCES})
 
